apply some IntelliJ Analyze fixes